feat: allow changing root directory
